<resources>
<string name="app_name">loginappfire</string>
<string name="mobile_number">Mobile Number</string>
<string name="login_signup">LogIn / SignUp</string>
<string name="resend_code">Resend code</string>
<string name="resend_otp_again">Resend OTP</string>
<string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
<string name="verify">Verify</string>
<string name="login_sec_text">We will send you an One Time Password \non this number</string>
<string name="please_wait">Please Wait...</string>
<string name="Sending_Otp">Sending OTP...</string>
</resources>