<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_login"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/login_pic"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OTP Verification"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login"
        android:layout_marginTop="15dp"/>


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/sec_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sec_text"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/lightBlack"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                app:ccp_countryAutoDetectionPref="SIM_ONLY"
                app:ccp_defaultLanguage="ENGLISH"
                app:ccp_rememberLastSelection="true"
                app:ccp_showPhoneCode="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:hint="@string/mobile_number"
                    android:textSize="20sp"
                    android:maxLength="10"
                    android:text=""
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:alpha="0.6"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/button"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>