<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_login"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/verify_pic"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OTP Verification"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login"
        android:layout_marginTop="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightBlack"
                android:text="Enter the OTP sent to : "
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mobileNumberText"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Your mobile number"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <com.chaos.view.PinView
                android:id="@+id/pinview"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@color/grey"
                android:textSize="24sp"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemRadius="20dp"
                app:itemSpacing="10dp"
                app:itemWidth="50dp"
                app:lineWidth="0dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_verifyotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:textSize="18sp"
            android:background="@drawable/button"
            android:text="@string/verify" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="end"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/lightBlack" />

            <TextView
                android:id="@+id/timertext"
                android:layout_toEndOf="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:text="@string/resend_otp_again"
                android:textSize="17sp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/resendotp_verifyotp"
                android:layout_toEndOf="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:text="@string/resend_otp_again"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>